--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gmp
-url = https://mirrors.kernel.org/gnu/gmp/gmp-6.2.0.tar.bz2
+url = https://mirrors.kernel.org/gnu/gmp/gmp-6.2.1.tar.xz
 archives = 
 giturl = 
 domain = 
@@ -18,8 +18,10 @@ alias =
 32bit_only = false
 # allow package to build with test failures
 allow_test_failures = false
-# alternative cargo pattern
+# cargo local update of all dependencies in chroot
 altcargo1 = false
+# enable cargo local with full lto
+altcargo1_lto = false
 # alternative pgo flags
 altflags_pgo = true
 # alternative pgo 32bits flags
@@ -46,6 +48,8 @@ conservative_flags = false
 dev_requires_extras = false
 # disable maintainer mode for autotools
 disable_maintainer = false
+# disable the locales subpackage
+exclude_locales = false
 # pass -ffast-math to compiler
 fast-math = false
 # alternative flags
